# Chimera_atc

./: .gitignore  README.md  pyproject.toml  requirements.txt
chimera/: __init__.py  data.py  dynamic_hybrid_model.py  eval.py  metrics.py  utils.py
chimera/adapters/: __init__.py  hf_blocks.py
configs/: baselines.yaml  dynamic_hybrid.yaml  dynamic_hybrid_tiny.yaml
docs/: baselines.md
scripts/: build_dynamic_hybrid.py  count_model_params.py  debug_generation.py  debug_nemotron_cache.py  download_baselines.py  evaluate_baselines.py  evaluate_dynamic_hybrid.py  make_paper_table.py  make_table.py  make_tiny_local_branches.py  measure_efficiency.py  preflight_baselines.py  run_smoke.py  train_dynamic_hybrid.py
tests/: _factories.py  test_data.py  test_dynamic_hybrid.py  test_flops_per_token.py  test_metrics.py  test_sampling.py
